Added code for nav and hero image

--- a/ghosttown.html
+++ b/ghosttown.html
@@ -16,6 +16,7 @@
   </head>
 
   <body>
+    <!-- Header -->
     <header>
       <div class="container">
         <nav class="nav">
@@ -32,6 +33,28 @@
         </nav>
       </div>
     </header>
+    <!-- Hero Image -->
+    <section class="hero" id="hero">
+      <div class="container">
+        <h2 class="sub-header">
+          <span class="first-letter">G</span>host Town:
+        </h2>
+        <h1 class="headline">
+          A deserted town with few or no remaining inhabitants.
+        </h1>
+        <div class="headline-description">
+          <div class="separate">
+            <div class="line line-left"></div>
+            <div class="asterisk"><i class="fas fa-asterisk"></i></div>
+            <div class="line line-right"></div>
+          </div>
+          <div class="single-animation">
+            <h5>Ready to be opened</h5>
+            <a href="#" class="btn cta-btn"></a>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <script src="src/script.js"></script>
   </body>
