--- a/ghosttown.html
+++ b/ghosttown.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ghost Towns</title>
+    <title>Ghost Towns.</title>
 
     <link rel="stylesheet" href="src/style.css" />
 
@@ -15,7 +15,7 @@
     <script src="https://unpkg.com/scrollreveal"></script>
   </head>
 
-  <body>
+  <body class="open">
     <!-- Header -->
     <header>
       <div class="container">
