Added JS for menu toggle

--- a/ghosttown.html
+++ b/ghosttown.html
@@ -15,7 +15,7 @@
     <script src="https://unpkg.com/scrollreveal"></script>
   </head>
 
-  <body class="open">
+  <body>
     <!-- Header -->
     <header>
       <div class="container">
