Fixed positioning in nav

--- a/ghosttown.html
+++ b/ghosttown.html
@@ -21,6 +21,7 @@
       <div class="container">
         <nav class="nav">
           <div class="menu-toggle">
+            <img src="#" />
             <i class="fas fa-bars"></i>
             <i class="fas fa-times"></i>
           </div>
