--- a/ghosttown.html
+++ b/ghosttown.html
@@ -21,7 +21,6 @@
       <div class="container">
         <nav class="nav">
           <div class="menu-toggle">
-            <img src="#" />
             <i class="fas fa-bars"></i>
             <i class="fas fa-times"></i>
           </div>
@@ -38,7 +37,7 @@
     <section class="hero" id="hero">
       <div class="container">
         <h2 class="sub-header">
-          <span class="first-letter">G</span>host Town:
+          <span class="first-letter">G</span>host Town.
         </h2>
         <h1 class="headline">
           A deserted town with few or no remaining inhabitants.
@@ -46,12 +45,12 @@
         <div class="headline-description">
           <div class="separate">
             <div class="line line-left"></div>
-            <div class="asterisk"><i class="fas fa-asterisk"></i></div>
+            <div class="asterisk"><i class="fas fa-circle"></i></div>
             <div class="line line-right"></div>
           </div>
           <div class="single-animation">
-            <h5>Ready to be opened</h5>
-            <a href="#" class="btn cta-btn"></a>
+            <h5>Proceed with caution.</h5>
+            <a href="#" class="btn cta-btn">Begin.</a>
           </div>
         </div>
       </div>
