--- a/ghosttown.html
+++ b/ghosttown.html
@@ -49,8 +49,43 @@
             <div class="line line-right"></div>
           </div>
           <div class="single-animation">
-            <h5>Proceed with caution.</h5>
-            <a href="#" class="btn cta-btn">Begin.</a>
+            <a href="#" class="btn cta-btn">Proceed with caution.</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!--First Section-->
+    <section class="story">
+      <div class="container">
+        <div class="gt-info">
+          <div class="gt-description padding-right animate-left">
+            <div class="global-header">
+              <h2 class="sub-header">
+                <span class="first-letter">I</span>nformation.
+              </h2>
+              <h1 class="headline headline-dark">
+                The fascinating world of ghost towns...
+              </h1>
+              <div class="separate">
+                <div class="line line-left"></div>
+                <div class="asterisk"><i class="fas fa-circle"></i></div>
+                <div class="line line-right"></div>
+              </div>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
+                mollis finibus lectus, eget ultricies libero laoreet ac. Etiam
+                faucibus rutrum semper. Fusce nunc quam, tristique sed eleifend
+                quis, maximus id mi. Fusce faucibus euismod nisl quis euismod.
+                Suspendisse lobortis risus ligula, id facilisis dui efficitur
+                sed. Mauris tempus tincidunt laoreet. Donec risus mi, porta ut
+                massa id, vulputate accumsan ipsum.
+              </p>
+              <a href="#" class="btn body-btn">More information...</a>
+            </div>
+            <div class="gt-info-img animate-right">
+              <img src="img/rowley.jpg" alt="Rowley, Alberta" />
+            </div>
           </div>
         </div>
       </div>
