styled second section

--- a/ghosttown.html
+++ b/ghosttown.html
@@ -91,6 +91,25 @@
       </div>
     </section>
 
+    <!-- Second Section -->
+
+    <section class="tips between">
+      <div class="container">
+        <div class="global-header">
+          <div class="animate-top">
+            <h2 class="sub-header"><span class="first-letter">T</span>ips.</h2>
+            <div class="animate-bottom">
+              <h1 class="headline headline-dark">
+                Guidelines for exploring ghost towns...
+              </h1>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Third Section -->
+
     <script src="src/script.js"></script>
   </body>
 </html>
