set up & styled section 3

--- a/ghosttown.html
+++ b/ghosttown.html
@@ -110,6 +110,43 @@
 
     <!-- Third Section -->
 
+    <section class="locations">
+      <div class="container">
+        <div class="info">
+          <div class="image-group padding-right animate-left">
+            <img src="img/bankhead2.jpg" alt="Bankhead, Alberta" />
+            <img src="img/rowley2.jpg" alt="Rowley, Alberta" />
+            <img src="img/wayne.jpg" alt="Wayne, Alberta" />
+            <img src="img/bulwark.jpg" alt="Bulwark, Alberta" />
+          </div>
+          <div class="gt-description animate-right">
+            <div class="global-header">
+                <h2 class="sub-header">
+                  <span class="first-letter">L</span>ocations.
+                </h2>
+                <h1 class="headline headline-dark">
+                  Discover Alberta ghost towns...
+                </h1>
+                <div class="separate">
+                  <div class="line line-left"></div>
+                  <div class="asterisk"><i class="fas fa-circle"></i></div>
+                  <div class="line line-right"></div>
+                </div>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
+                    mollis finibus lectus, eget ultricies libero laoreet ac. Etiam
+                    faucibus rutrum semper. Fusce nunc quam, tristique sed eleifend
+                    quis, maximus id mi. Fusce faucibus euismod nisl quis euismod.
+                    Suspendisse lobortis risus ligula, id facilisis dui efficitur
+                    sed. Mauris tempus tincidunt laoreet. Donec risus mi, porta ut
+                    massa id, vulputate accumsan ipsum.
+                  </p>
+                  <a href="#" class="btn body-btn">More information...</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script src="src/script.js"></script>
   </body>
 </html>
