set up and styled final section

--- a/ghosttown.html
+++ b/ghosttown.html
@@ -97,10 +97,10 @@
       <div class="container">
         <div class="global-header">
           <div class="animate-top">
-            <h2 class="sub-header"><span class="first-letter">T</span>ips.</h2>
+            <h2 class="sub-header"><span class="first-letter">P</span>hotos.</h2>
             <div class="animate-bottom">
               <h1 class="headline headline-dark">
-                Guidelines for exploring ghost towns...
+                Images by Candice...
               </h1>
             </div>
           </div>
@@ -146,6 +146,62 @@
         </div>
       </div>
     </section>
+
+    <!-- Fourth Section -->
+
+    <section class="learn between">
+        <div class="container">
+          <div class="global-header">
+            <div class="animate-top">
+              <h2 class="sub-header"><span class="first-letter">L</span>earn.</h2>
+              <div class="animate-bottom">
+                <h1 class="headline">
+                  Unravel local history...
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Final Section -->
+
+      <section class="blog">
+        <div class="container">
+            <div class="gt-info">
+              <div class="gt-description padding-right animate-left">
+                <div class="global-header">
+                  <h2 class="sub-header">
+                    <span class="first-letter">B</span>log.
+                  </h2>
+                  <h1 class="headline headline-dark">
+                    Our Adventures...
+                  </h1>
+                  <div class="separate">
+                    <div class="line line-left"></div>
+                    <div class="asterisk"><i class="fas fa-circle"></i></div>
+                    <div class="line line-right"></div>
+                  </div>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
+                    mollis finibus lectus, eget ultricies libero laoreet ac. Etiam
+                    faucibus rutrum semper. Fusce nunc quam, tristique sed eleifend
+                    quis, maximus id mi. Fusce faucibus euismod nisl quis euismod.
+                    Suspendisse lobortis risus ligula, id facilisis dui efficitur
+                    sed. Mauris tempus tincidunt laoreet. Donec risus mi, porta ut
+                    massa id, vulputate accumsan ipsum.
+                  </p>
+                  <a href="#" class="btn body-btn">Visit Blog...</a>
+                </div>
+                <div class="image-group">
+                  <img src="img/wayne2.jpg" class="animate-top" alt="Wayne, Alberta" />
+                  <img src="img/fairmontbs.JPG" class="animate-bottom"  alt="Banff, Alberta" />
+                </div>
+              </div>
+            </div>
+          </div>
+      </section>
+
+      <!-- Footer -->
 
     <script src="src/script.js"></script>
   </body>
