--- a/ghosttown.html
+++ b/ghosttown.html
@@ -202,6 +202,51 @@
       </section>
 
       <!-- Footer -->
+      <footer>
+<div class="container">
+<div class="to-top">
+    <a href="#hero"><i class="fas fa-chevron-up"></i></a>
+</div>
+<div class="footer-content">
+<div class="footer-content-about animate-up">
+
+<h2>About.</h2>
+<div class="separate">
+    <div class="line line-left"></div>
+    <div class="asterisk"><i class="fas fa-circle"></i></div>
+    <div class="line line-right"></div>
+  </div>
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+  </p>
+</div>
+
+<div class="footer-content-divider animate-bottom">
+<div class="socials">
+<h4>Follow Us.</h4>
+<ul class="social-icons">
+    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+    <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
+    <li><a href="#"><i class="fab fa-pinterest"></i></a></li>
+    <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+    <li><a href="#"><i class="fab fa-tripadvisor"></i></a></li>
+</ul>
+
+</div>
+
+<div class="newsletter-container">
+<h4>Newsletter</h4>
+<form action="" class="newsletter-form">
+    <input type="text" class="newsletter-input" placeholder="Email address...">
+    <button class="newsletter-btn" type="submit"><i class="fas fa-envelope"></i></button>
+</form>
+</div>
+
+</div>
+</div>
+</div>
+
+      </footer>
 
     <script src="src/script.js"></script>
   </body>
