Finihed page & finalized styling

--- a/ghosttown.html
+++ b/ghosttown.html
@@ -26,8 +26,10 @@
           </div>
 
           <ul class="nav-list">
-            <li class="nav-item"><a href="#" class="nav-link">Towns</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Gallery</a></li>
+            <li class="nav-item"><a href="#" class="nav-link active">Information</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Photos</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Locations</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Blog</a></li>
             <li class="nav-item"><a href="#" class="nav-link">About</a></li>
           </ul>
         </nav>
@@ -36,10 +38,11 @@
     <!-- Hero Image -->
     <section class="hero" id="hero">
       <div class="container">
-        <h2 class="sub-header">
-          <span class="first-letter">G</span>host Town.
+          <div class="big-bg">
+        <h2 class="big">
+          <span class="first-letter">G</span>host <span class="first-letter">T</span>own.
         </h2>
-        <h1 class="headline">
+        <h1 class="big-headline">
           A deserted town with few or no remaining inhabitants.
         </h1>
         <div class="headline-description">
@@ -51,7 +54,7 @@
           <div class="single-animation">
             <a href="#" class="btn cta-btn">Proceed with caution.</a>
           </div>
-        </div>
+        </div></div>
       </div>
     </section>
 
@@ -95,6 +98,7 @@
 
     <section class="tips between">
       <div class="container">
+        <div class="big-bg">
         <div class="global-header">
           <div class="animate-top">
             <h2 class="sub-header"><span class="first-letter">P</span>hotos.</h2>
@@ -103,7 +107,7 @@
                 Images by Candice...
               </h1>
             </div>
-          </div>
+          </div></div>
         </div>
       </div>
     </section>
@@ -151,6 +155,7 @@
 
     <section class="learn between">
         <div class="container">
+            <div class="big-bg">
           <div class="global-header">
             <div class="animate-top">
               <h2 class="sub-header"><span class="first-letter">L</span>earn.</h2>
@@ -159,7 +164,7 @@
                   Unravel local history...
               </div>
             </div>
-          </div>
+          </div></div>
         </div>
       </section>
 
