Updated some styles

--- a/ghosttown.html
+++ b/ghosttown.html
@@ -42,7 +42,7 @@
         <h2 class="big">
           <span class="first-letter">G</span>host <span class="first-letter">T</span>own.
         </h2>
-        <h1 class="big-headline">
+        <h1 class="headline">
           A deserted town with few or no remaining inhabitants.
         </h1>
         <div class="headline-description">
@@ -79,10 +79,7 @@
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
                 mollis finibus lectus, eget ultricies libero laoreet ac. Etiam
                 faucibus rutrum semper. Fusce nunc quam, tristique sed eleifend
-                quis, maximus id mi. Fusce faucibus euismod nisl quis euismod.
-                Suspendisse lobortis risus ligula, id facilisis dui efficitur
-                sed. Mauris tempus tincidunt laoreet. Donec risus mi, porta ut
-                massa id, vulputate accumsan ipsum.
+                quis, maximus id mi.
               </p>
               <a href="#" class="btn body-btn">More information...</a>
             </div>
@@ -190,10 +187,7 @@
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
                     mollis finibus lectus, eget ultricies libero laoreet ac. Etiam
                     faucibus rutrum semper. Fusce nunc quam, tristique sed eleifend
-                    quis, maximus id mi. Fusce faucibus euismod nisl quis euismod.
-                    Suspendisse lobortis risus ligula, id facilisis dui efficitur
-                    sed. Mauris tempus tincidunt laoreet. Donec risus mi, porta ut
-                    massa id, vulputate accumsan ipsum.
+                    quis, maximus id mi. 
                   </p>
                   <a href="#" class="btn body-btn">Visit Blog...</a>
                 </div>
