--- a/ghosttown.html
+++ b/ghosttown.html
@@ -48,7 +48,7 @@
         <div class="headline-description">
           <div class="separate">
             <div class="line line-left"></div>
-            <div class="asterisk"><i class="fas fa-circle"></i></div>
+            <div class="asterisk"><i class="fas fa-asterisk"></i></div>
             <div class="line line-right"></div>
           </div>
           <div class="single-animation">
