--- a/ghosttown.html
+++ b/ghosttown.html
@@ -62,7 +62,7 @@
     <section class="story">
       <div class="container">
         <div class="gt-info">
-          <div class="gt-description padding-right animate-left">
+          <div class="gt-description animate-left">
             <div class="global-header">
               <h2 class="sub-header">
                 <span class="first-letter">I</span>nformation.
@@ -114,7 +114,7 @@
     <section class="locations">
       <div class="container">
         <div class="info">
-          <div class="image-group padding-right animate-left">
+          <div class="image-group animate-left">
             <img src="img/bankhead2.jpg" alt="Bankhead, Alberta" />
             <img src="img/rowley2.jpg" alt="Rowley, Alberta" />
             <img src="img/wayne.jpg" alt="Wayne, Alberta" />
@@ -170,7 +170,7 @@
       <section class="blog">
         <div class="container">
             <div class="gt-info">
-              <div class="gt-description padding-right animate-left">
+              <div class="gt-description animate-left">
                 <div class="global-header">
                   <h2 class="sub-header">
                     <span class="first-letter">B</span>log.
@@ -207,7 +207,7 @@
     <a href="#hero"><i class="fas fa-chevron-up"></i></a>
 </div>
 <div class="footer-content">
-<div class="footer-content-about animate-up">
+<div class="footer-content-about animate-top">
 
 <h2>About.</h2>
 <div class="separate">
